--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:server": "json-server --watch db.json --port 4000",
     "lint": "next lint"
   },
   "dependencies": {
